增加插件窗口/支持插件列表热更新/支持插件热加载卸载/其余细节优化/目前容易卡死，原因不详